--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,18 @@ body {
     color: white;
 }
 
+li {
+    list-style: none;
+}
+
 a {
     text-decoration: none;
     color: white;
 }
 
+.margin-left-20 {
+    margin-left: 20px;
+}
 
 /*header*/
 header {
@@ -30,19 +37,47 @@ header {
 
 /*parte laterale*/
 aside {
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: black;
     width: 250px;
-    height: 4000px;
+    height: 100vh;
 }
 
 .logo {
-    width: 70%;
+    height: 60px;
+}
+
+.logo img {
+    height: 60px;
+    object-fit: contain;
 }
 
 .principal-logo {
-    margin: 10px;
+    padding: 10px;
 }
 
 .secondary-logo {
     display: none;
+}
+
+.nav li {
+    margin-bottom: 10px;
+}
+
+.nav a {
+    font-weight: 500;
+}
+
+.first-nav img {
+    width: 24px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.fa-plus-square {
+    font-size: 50px;
+    margin: 10px 10px 0 0;
+    vertical-align: middle;
 }
