--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ a {
     color: white;
 }
 
+.small-logo {
+    width: 18px;
+    vertical-align: middle;
+}
+
 .margin-left-20 {
     margin-left: 20px;
 }
@@ -42,7 +47,7 @@ aside {
     left: 0;
     background-color: black;
     width: 250px;
-    height: 100vh;
+    height: calc(100vh - 60px);
 }
 
 .logo {
@@ -52,6 +57,7 @@ aside {
 .logo img {
     height: 60px;
     object-fit: contain;
+    vertical-align: middle;
 }
 
 .principal-logo {
@@ -63,7 +69,7 @@ aside {
 }
 
 .nav li {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .nav a {
@@ -80,4 +86,25 @@ aside {
     font-size: 50px;
     margin: 10px 10px 0 0;
     vertical-align: middle;
+}
+
+.profile-image {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: lightgrey;
+    border-radius: 50%;
+    overflow: hidden;
+    vertical-align: middle;
+}
+
+.profile-image img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+}
+
+.profile-download hr {
+    width: calc(100% - 40px);
+    margin: 15px 0;
 }
