--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 .margin-left-20 {
-    margin-left: 20px;
+    padding-left: 20px;
 }
 
 /*header*/
@@ -28,12 +28,14 @@ header {
     justify-content: flex-end;
     align-items: center;
     height: 60px;
+    width: calc(100vw - 250px);
+    margin-left: 250px;
     background-color: #080b12;
 }
 
 .upgrade {
     margin-right: 30px;
-    background-color: #080b12;
+    background-color: none;
     padding: 5px 25px;
     border: 1px solid white;
     border-radius: 20px;
@@ -68,6 +70,30 @@ aside {
     display: none;
 }
 
+.square {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    margin: 15px 15px 15px 0;
+    color: black;
+    font-size: 30px;
+    background-color: #717171;
+}
+
+.playlist-create a {
+    color: #717171;
+    vertical-align: middle;
+    font-weight: 500;
+}
+
+.playlist {
+    height: calc(100% - 350px);
+    overflow-y: auto;
+}
+
 .nav li {
     margin-bottom: 15px;
 }
@@ -80,17 +106,6 @@ aside {
     width: 24px;
     vertical-align: middle;
     margin-right: 10px;
-}
-
-.fa-plus-square {
-    font-size: 50px;
-    margin: 10px 10px 0 0;
-    vertical-align: middle;
-}
-
-.profile-download {
-    position: absolute;
-    bottom: 10px;
 }
 
 .profile-image {
@@ -107,6 +122,10 @@ aside {
     width: 20px;
     height: 20px;
     object-fit: contain;
+}
+
+.profile-download strong {
+    color: #ffffff;
 }
 
 .profile-download hr {
