--- a/css/Responsive.css
+++ b/css/Responsive.css
@@ -4,3 +4,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 1100px) {
+    
+}
+
+@media screen and (max-width: 700px) {
+    
+}
+
+@media screen and (max-width: 600px) {
+    aside {
+        display: inline-block;
+        width: 100px; 
+    }
+
+    hr {
+        display: none;
+    }
+
+    .principal-logo {
+        display: none;
+    }
+    .secondary-logo {
+        display: block;
+    }
+
+    aside a {
+        display: none;
+    }
+
+    .profile-download strong {
+        display: none;
+    }
+
+}
