completato responsive nav

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ aside a {
     display: none;
 }
 
+span > strong {
+    display: none;
+}
+
 .square {
     display: inline-block;
     text-align: center;
