--- a/css/Responsive.css
+++ b/css/Responsive.css
@@ -14,14 +14,52 @@
 }
 
 @media screen and (max-width: 600px) {
+    header {
+        width: calc(100% - 40px);
+        margin-left: 40px;
+    }
+
     aside {
-        display: inline-block;
-        width: 100px; 
+        width: 40px;
+    }
+
+    nav {
+        margin-left: 8px;
+        margin-top: 8px;
+    }
+
+    .margin-left-20 {
+        padding-left: 0px;
+    }
+
+
+    .playlist {
+        height: calc(100% - 200px);
+    }
+
+    .logo {
+        margin-top: 3px;
+        height: 20px;
+    }
+
+    .logo img {
+        height: 20px;
+        object-fit: contain;
+        vertical-align: middle;
+        margin: auto;
+    }
+
+    .square {
+        display: none;
     }
 
     hr {
         display: none;
     }
+
+    .small-logo {
+        margin-bottom: 8px;
+    } 
 
     .principal-logo {
         display: none;
