--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ footer {
 }
 
 .col-left, .col-right {
-    width: 250px;
+    width: 200px;
     position: fixed;
     bottom: 20px;
 }
@@ -202,7 +202,7 @@ a .fa-heart {
 }
 
 .col-center {
-    width: calc(100% - 500px);
+    width: calc(100% - 400px);
     margin: auto;
     text-align: center;
 }
@@ -230,7 +230,7 @@ a .fa-heart {
 
 .bar-timing-song {
     border-radius: 50px;
-    width: 60%;
+    width: 30%;
     margin: auto;
     height: 6px;
     background-color: lightgrey;
@@ -261,7 +261,7 @@ a .fa-heart {
 }
 
 .time-song.audio .bar-timing-song {
-    width: 120px;
-    margin:  20px;
+    width: 100px;
+    margin:  20 10px;
 }
 
