--- a/css/Responsive.css
+++ b/css/Responsive.css
@@ -6,10 +6,26 @@
 }
 
 @media screen and (max-width: 1100px) {
+    .first-section {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+    .album {
+        width: calc(100% / 4 - 10px);
+        
+    }
     
 }
 
 @media screen and (max-width: 700px) {
+    .first-section {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+    .album {
+        width: calc(100% / 2 - 10px);
+        
+    }
     
 }
 
@@ -76,4 +92,8 @@
         display: none;
     }
 
+    main {
+        width: calc(100% - 40px);
+        margin-left: 39px;
+    }
 }
