--- a/css/Responsive.css
+++ b/css/Responsive.css
@@ -6,6 +6,9 @@
 }
 
 @media screen and (max-width: 1100px) {
+    h2 {
+        margin: 15px;
+    }
     .first-section {
         flex-wrap: wrap;
         justify-content: flex-start;
