--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ a {
     padding-left: 20px;
 }
 
+.margin-left-25 {
+    margin: 25px;
+}
+
 h2 {
     margin: 25px;
 }
@@ -256,6 +260,19 @@ main {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+}
+
+.flex-start {
+    justify-content: flex-start;
+}
+
+.flex-start .image-album:first-child {
+    margin-right: 20px;
+}
+
+.rounded {
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 
